--- a/app/scripts/dashboards/admin/instance/views/index.html
+++ b/app/scripts/dashboards/admin/instance/views/index.html
@@ -1,91 +1,55 @@
 <div>
   <div class='instance_tabs'>
     <ul>
-        <li ng-repeat="tab in tabs"
-            ng-class="{active:isActiveTab(tab.template)}"
-            class="tab"
-            ng-click="onClickTab(tab)" ng-if="tab.enable">{{tab.title}}</li>
+      <li ng-repeat="tab in tabs"
+        ng-class="{active:isActiveTab(tab.template)}"
+        class="tab"
+        ng-click="onClickTab(tab)" ng-if="tab.enable">{{tab.title}}</li>
     </ul>
   </div>
 
 <div id="mainView">
-    <div ng-include="currentTab"></div>
+  <div ng-include="currentTab"></div>
 </div>
 
 <script type="text/ng-template" id="one.tpl.html">
-  <div id="viewOne" class='table-tab ui-view-container'>
-      <div class='action_group'>
-        <button class='btn vnc' ng-class="vncLinkEnableClass" ng-model='singleSelectedItem' ng-click="detailShow(singleSelectedItem.id)" >
-            <i></i>
-            <a href="#/admin/instance/{{singleSelectedItem.id}}/console">VNC Console</a></button>
-        <button class='btn del' ng-class="batchActionEnableClass" ng-click='deleteServer()'><i></i>Delete</button>
-        <div class="btn-group">
-          <button type="button" class="btn btn-default dropdown-toggle btn-enable more" data-toggle="dropdown"><i></i>
-          More Action
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" role="menu">
-          <li ng-repeat="action in batchActions">
-          <a ng-click="serverAction($index, 'batch')"><i ng-class="action.action"></i>{{action.verbose}}</a></li>
-          <li class='split-line'></li>
-          <li ng-repeat="action in mantanceActions">
-          <a ng-click="serverAction($index, 'mantance')"><i ng-class="action.action"></i>{{action.verbose}}</a></li>
-          <li class='split-line'></li>
-          <li ng-repeat="action in networkActions">
-          <a ng-click="serverAction($index, 'network')"><i ng-class="action.action"></i>{{action.verbose}}</a></li>
-          <li class='split-line'></li>
-          <li ng-repeat="action in volumeActions">
-          <a ng-click="serverAction($index, 'volume')"><i ng-class="action.action"></i>{{action.verbose}}</a></li>
-        </ul>
-        </div>
-        <button class='btn btn-enable' ng-click='refresResource(instances)'><i></i>Refresh</button>
+  <div id="viewOne" class='table-tab ui-view-container' ng-controller='instancesCtrl'>
+    <div class='action_group'>
+      <button class='btn vnc' ng-class="vncLinkEnableClass" ng-model='singleSelectedItem' ng-click="detailShow(singleSelectedItem.id)" >
+        <i></i>
+        <a href="#/admin/instance/{{singleSelectedItem.id}}/console">{{ buttonGroup.console }}</a></button>
+    <button class='btn del' ng-class="batchActionEnableClass" cross-confirm='deleteServer()' items=selectedItems cross-confirm-action="{{buttonGroup.delete}}"  action-enable="{{batchActionEnableClass}}"><i></i>{{ buttonGroup.delete }}</button>
+      <div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle btn-enable more" data-toggle="dropdown"><i></i>
+        {{ buttonGroup.more }}
+        <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu" role="menu">
+        <li ng-repeat="action in batchActions">
+        <a cross-confirm="serverAction($index, 'batch')" items=selectedItems cross-confirm-action={{action.verbose}} ng-class="action.enable" action-enable="{{action.enable}}">
+          <i ng-class="action.action"></i>{{action.verbose}}</a></li>
+        <li class='split-line'></li>
+        <li ng-repeat="action in mantanceActions" dynamic=action.actionTemplate></li>
+        <!--
+        <li class='split-line'></li>
+        <li ng-repeat="action in networkActions">
+        <a ng-click="serverAction($index, 'network')"><i ng-class="action.action"></i>{{action.verbose}}</a></li>
+        <li class='split-line'></li>
+        <li ng-repeat="action in volumeActions">
+        <a ng-click="serverAction($index, 'volume')"><i ng-class="action.action"></i>{{action.verbose}}</a></li>
+        -->
+      </ul>
       </div>
-    <!-- TODO(ZhengYue): Make the data table unification -->
-    <table class="table table-striped table-condensed table-hover cross-data-table instances-table">
-      <thead>
-        <tr class='cross-data-table-header'>
-          <th class='checkbox-in-table'>
-            <select-all-checkbox checkboxes='instances' all-selected="AllSelectedItems" all-clear="NoSelectedItems"></select-all-checkbox>
-          </th>
-          <th ng-repeat='col in columnDefs' ng-class=col.field custom-sort order=col.field sort="sort">{{col.displayName}}</th>
-        </tr>
-      </thead>
-      <tbody class='cross-data-table-body'>
-        <tr ng-repeat='instance in instances| orderBy:sort.sortingOrder:sort.reverse' ng-class="{even: $even, odd: $odd}" class='cross-data-table-body-row'>
-            <td class='checkbox-in-table'><input type='checkbox' ng-model="instance.isSelected" ng-change="selectChange()"/></td>
-            <td ng-repeat='col in columnDefs' class='cross-data-table-body-cell ngCellText' >
-                <div dynamic=col.cellTemplate></div>
-            </td>
-        </tr>
-       </tbody>
-       <tfoot class='cross-data-table-foot'>
-         <td colspan="9">
-<div ng-show="showFooter" class="ngFooterPanel" ng-class="{'ui-widget-content': jqueryUITheme, 'ui-corner-bottom': jqueryUITheme}" ng-style="footerStyle()">
-  <div class="ngTotalSelectContainer" >
-    <div class="ngFooterTotalItems" ng-class="{'ngNoMultiSelect': !multiSelect}" >
-      <span class="ngLabel">{{i18n.ngTotalItemsLabel}} {{maxRows()}}</span><span ng-show="filterText.length > 0" class="ngLabel">({{i18n.ngShowingItemsLabel}} {{totalFilteredItemsLength()}})</span>
+      <button class='btn btn-enable fresh' ng-click='refresResource(instances)'><i></i>{{ buttonGroup.refresh }}</button>
     </div>
-    <div class="ngFooterSelectedItems" ng-show="multiSelect">
-      <span class="ngLabel">{{i18n.ngSelectedItemsLabel}} {{selectedItems.length}}</span>
-    </div>
-  </div>
-  <div class='pageCode'>
-      <li ng-show='unFristPage' ng-click="gotoPage('frist')" class="change-page" data-toggle="tooltip" data-placement="top" title="Frist Page">&lt;&lt;</li>
-      <li ng-show='unFristPage' ng-click="gotoPage('pre')" class="change-page" data-toggle="tooltip" data-placement="top" title="Prev Page">&lt;</li>
-      <li ng-repeat="page in showPages" class="page{{page+1==pagingOptions.currentPage }}" ng-click="gotoPage($index)">{{ page + 1 }}</li>
-      <li ng-show='unLastPage' ng-click="gotoPage('next')" class="change-page" data-toggle="tooltip" data-placement="top" title="Next Page">&gt;</li>
-      <li ng-show='unLastPage' ng-click="gotoPage('last')" class="change-page" data-toggle="tooltip" data-placement="top" title="Last Page">&gt;&gt;</li>
-  </div>
-</div>
-          </td>
-       </tfoot>
-    <div ui-view ng-init="detail_show='detail_hide'" class="detail-panel" ng-class={{"detail_show"}} ng-style="{height: detailHeight, minHeight: 480, width: detailWidth, left: offsetLeft}"></div>
-    </table>
+    <div datatable='instancesOpts'></div>
+  <div ui-view ng-init="detail_show='detail_hide'" class="detail-panel" ng-class={{"detail_show"}} ng-style="{height: detailHeight, minHeight: 480, width: detailWidth, left: offsetLeft}"></div>
+    <div ng-http-loader template="views/common/loader.tpl.html" class='login-loading' ng-show="listServers"></div>
   </div>
 </script>
 
 <script type="text/ng-template" id="two.tpl.html">
-    <div id="viewTwo">
+    <div id="viewTwo" class='table-tab ui-view-container' ng-controller='softDeletedCtrl'>
       <div class='action_group'>
           <button class='btn' ng-class="batchActionEnableClass">VNC Console</button>
         <button class='btn' ng-click='deleteServer()'>Delete</button>
@@ -109,6 +73,8 @@
         </ul>
         </div>
       </div>
+      <div datatable='softDeletedOpts'></div>
+      <div ui-view ng-init="detail_show='detail_hide'" class="detail-panel" ng-class={{"detail_show"}} ng-style="{height: detailHeight, minHeight: 480, width: detailWidth, left: offsetLeft}"></div>
     </div>
 </script>
 
@@ -118,5 +84,4 @@
     </div>
 </script>
 
-<!-- TODO(ZhengYue): Separate the part of table-->
 </div>
