--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -44,6 +44,7 @@ body {
   width: 100%;
   height: 100%;
   padding: 0;
+  font-family: "Microsoft Yahei", Tahoma, Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #666666;
@@ -79,27 +80,55 @@ body {
   list-style: none;
 }
 
-.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .nav-title-lead {
+.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .panel-group {
+  margin-bottom: 0;
+}
+
+.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .panel-group .panel-default {
+  border: none;
+  border-radius: 0;
+}
+
+.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .panel-group .panel-default > .panel-heading {
   height: 40px;
+  padding: 0;
   margin-left: 30px;
   font-size: 15px;
   font-weight: 600;
   line-height: 40px;
-  color: #ffffff;
+  color: white;
   cursor: pointer;
+  background-color: #2c4a67;
+  border: none;
 }
 
-.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .nav-title-lead > i {
+.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .panel-group .panel-default > .panel-heading .panel-title a {
+  display: block;
+  padding: 10px 0 15px 0px;
+  font-size: 15px;
+  text-decoration: none;
+}
+
+.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .panel-group .panel-default > .panel-heading .panel-title a i {
   display: inline-block;
   width: 20px;
   height: 20px;
   margin-right: 10px;
   vertical-align: middle;
+}
+
+.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .panel-group .panel-default > .panel-heading .panel-title a .cross-nav-system {
   background: url(../images/cross-nav-system.jpg) no-repeat;
 }
 
-.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .nav-title-lead .cross-nav-system {
-  background: url(../images/cross-nav-system.jpg) no-repeat;
+.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .panel-group .panel-default > .panel-collapse .panel-body {
+  padding: 0;
+  border: none;
+}
+
+.cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .panel-group .panel {
+  margin-top: 0;
+  background: #2c4a67;
 }
 
 .cross-index > .cross-frame-left > .cross-tool-nav .cross-tool-nav-bar .nav-title-item > a {
@@ -225,4 +254,494 @@ svg.cross-topology-line path {
 
 .cross-topology-vm {
   background: url(../images/dashboard_admin/overview/topology_vm.png) center bottom no-repeat;
+}
+
+.http-loader__wrapper .http-loader {
+  width: 27px;
+  height: 27px;
+  margin: 0 auto;
+  background: url(../images/login/loading.png) no-repeat;
+  -webkit-animation-delay: 0;
+     -moz-animation-delay: 0;
+      -ms-animation-delay: 0;
+  -webkit-animation-duration: 1s;
+     -moz-animation-duration: 1s;
+      -ms-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+     -moz-animation-iteration-count: infinite;
+      -ms-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-name: loading;
+     -moz-animation-name: loading;
+      -ms-animation-name: loading;
+          animation-name: loading;
+  -webkit-animation-play-state: running;
+     -moz-animation-play-state: running;
+      -ms-animation-play-state: running;
+          animation-play-state: running;
+  -webkit-animation-timing-function: linear;
+     -moz-animation-timing-function: linear;
+      -ms-animation-timing-function: linear;
+          animation-timing-function: linear;
+  animation-linearanimation-delay: 0;
+}
+
+.modal-dialog {
+  width: 450px;
+  min-width: 300px;
+  margin: 10% auto 0;
+}
+
+.modal-dialog .modal-content {
+  border: 0;
+  border-radius: 3px;
+}
+
+.modal-dialog > .modal-content > .cross-modal-header > .header-row {
+  height: 40px;
+  background: #323232;
+  border-radius: 3px 3px 0 0;
+}
+
+.modal-dialog > .modal-content > .cross-modal-header > .header-row > .title {
+  display: inline-block;
+  max-width: 90%;
+  margin-top: 5px;
+  margin-left: 10px;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 30px;
+  color: #fff;
+  white-space: nowrap;
+}
+
+.modal-dialog > .modal-content > .cross-modal-header > .header-row > .close {
+  margin-top: 3px;
+  margin-right: 10px;
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 30px;
+  color: #fff;
+  text-align: center;
+  opacity: 1;
+}
+
+.modal-dialog > .modal-content > .cross-modal-header > .header-row > .close:hover {
+  text-shadow: 0 0 20px #fff;
+  -webkit-transition: text-shadow 0.5s;
+       -o-transition: text-shadow 0.5s;
+          transition: text-shadow 0.5s;
+}
+
+.modal-dialog > .modal-content > .cross-modal-center {
+  width: 450px;
+}
+
+.modal-dialog form > div > .step-header {
+  background: #f6f7f7;
+}
+
+.modal-dialog form > div > .step-header > .step-header-empty {
+  height: 40px;
+}
+
+.modal-dialog form > div > .step-header > .step-notes {
+  height: 20px;
+  padding-right: 60px;
+  padding-left: 60px;
+}
+
+.modal-dialog form > div > .step-header > .step-notes .step-parallel {
+  position: absolute;
+  margin-top: -10px;
+  margin-left: -50px;
+}
+
+.modal-dialog form > div > .step-header > .step-notes .step-parallel > .step-tab {
+  display: inline-block;
+  width: 90px;
+  height: 30px;
+  margin: 0 5px;
+  color: #888;
+  text-align: center;
+  cursor: pointer;
+  border-bottom: 2px solid #c9c9c9;
+}
+
+.modal-dialog form > div > .step-header > .step-notes .step-parallel > .step-tab.active {
+  color: #29aaee;
+}
+
+.modal-dialog form > div > .step-header > .step-notes .step-parallel > .step-bottom {
+  position: relative;
+  height: 2px;
+  margin-top: -2px;
+}
+
+.modal-dialog form > div > .step-header > .step-notes .step-parallel > .step-bottom > .step-index {
+  position: absolute;
+  z-index: 1;
+  width: 90px;
+  height: 2px;
+  margin: 0 5px;
+  background: #29aaee;
+  -webkit-transition: left .5s;
+       -o-transition: left .5s;
+          transition: left .5s;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table {
+  width: 100%;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table tr > .step-item {
+  height: 2px;
+  background: #c9c9c9;
+  border: 1px solid #c9c9c9;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table tr > .step-item > .step-inner {
+  position: relative;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table tr > .step-item:first-child {
+  width: 1px;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table tr > .step-item.active {
+  background: #29aaee;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table tr > .step-item.active > .step-inner > .step-lead-field > .step-index {
+  background: #29aaee;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table tr > .step-item > .step-inner > .step-lead-field {
+  position: absolute;
+  right: -50px;
+  z-index: 1;
+  display: inline-block;
+  width: 100px;
+  margin-top: -35px;
+  text-align: center;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table tr > .step-item > .step-inner > .step-lead-field > .step-note {
+  color: #29aaee;
+}
+
+.modal-dialog form > div > .step-header > .step-notes > table tr > .step-item > .step-inner > .step-lead-field > .step-index {
+  position: absolute;
+  top: 25px;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin-left: -11px;
+  font-size: 11px;
+  line-height: 14px;
+  color: #fff;
+  text-align: center;
+  background: #d9d9d9;
+  border: 3px solid #d9d9d9;
+  border-radius: 10px;
+}
+
+.modal-dialog form > div > .fields-area {
+  width: 100%;
+  padding: 0;
+  padding-top: 27px;
+  margin-bottom: 10px;
+  overflow-x: hidden;
+}
+
+.modal-dialog form > div > .fields-area .field {
+  margin: 10px 10px;
+}
+
+.modal-dialog form > div > .fields-area .field > .field-label {
+  display: inline-block;
+  width: 100px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-right: 10px;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: right;
+  vertical-align: top;
+}
+
+.modal-dialog form > div > .fields-area .field > .field-label.field-next-line {
+  display: block;
+}
+
+.modal-dialog form > div > .fields-area .field .field-input {
+  display: inline-block;
+}
+
+.modal-dialog form > div > .fields-area .field .field-input .modal-tip {
+  position: fixed;
+  height: 24px;
+  padding-right: 3px;
+  padding-left: 3px;
+  margin-top: -28px;
+  margin-left: 100px;
+  background: #fff;
+  border: 1px solid #e36f6f;
+  border-radius: 5px;
+  box-shadow: 2px 0 5px #aaa;
+}
+
+.modal-dialog form > div > .fields-area .field .field-input .modal-tip > .tips-pointer {
+  position: absolute;
+  top: 22px;
+  left: 20px;
+  width: 12px;
+  height: 12px;
+}
+
+.modal-dialog form > div > .fields-area .field .field-input .modal-tip > .tips-pointer > .tips-pointer-outer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 0;
+  border: 5px solid transparent;
+  border-top: 5px solid #e36f6f;
+  border-left: 5px solid #e36f6f;
+  border-radius: 0 0 2px 2px;
+}
+
+.modal-dialog form > div > .fields-area .field .field-input .modal-tip > .tips-pointer > .tips-pointer-inner {
+  position: absolute;
+  top: 0;
+  left: 1px;
+  width: 0;
+  height: 0;
+  border: 4px solid transparent;
+  border-top: 4px solid #fff;
+  border-left: 4px solid #fff;
+  border-radius: 0 0 1px 1px;
+}
+
+.modal-dialog form textarea {
+  resize: none;
+}
+
+.modal-dialog form .fields-area .field-input .checkbox-list-field {
+  display: inline-block;
+  margin-right: 10px;
+  line-height: 27px;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field {
+  position: relative;
+  display: inline-block;
+  width: 240px;
+  vertical-align: middle;
+  background: #fff;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-selected {
+  position: relative;
+  padding: 0;
+  font-size: 14px;
+  border: 1px solid #c9c9c9;
+  border-radius: 3px;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-selected > input.wrap-select-input {
+  width: 234px;
+  padding: 5px 3px;
+  margin: 0;
+  font-size: 14px;
+  border: 0;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-selected > .wrap-select-clk {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  width: 32px;
+  height: 31px;
+  cursor: default;
+  background: #c9c9c9 url(../images/select-wrap-focus.png) center no-repeat;
+  border-radius: 0 3px 3px 0;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-selected.focus {
+  border: 1px solid #29aaee;
+  outline: none;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-selected.focus > .wrap-select-clk {
+  background: #29aaee url(../images/select-wrap.png) center no-repeat;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-list {
+  position: fixed;
+  z-index: 1000000;
+  display: none;
+  width: 240px;
+  max-height: 200px;
+  overflow-y: hidden;
+  background: #fff;
+  border: 1px solid #c9c9c9;
+  border-radius: 3px;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-list > .wrap-select-optgroup {
+  border-bottom: 1px solid #c9c9c9;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-list > .wrap-select-optgroup > .wrap-select-group-lead {
+  height: 24px;
+  margin-left: 5px;
+  font-weight: 800;
+  line-height: 24px;
+  text-align: left;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-list .wrap-select-option {
+  height: 24px;
+  line-height: 24px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-list .wrap-select-option:hover {
+  color: #fff;
+  background: #29aaee;
+}
+
+.modal-dialog form .fields-area .field-input .wrap-select-field > .wrap-select-list:hover {
+  overflow-y: auto;
+}
+
+.modal-dialog form input,
+.modal-dialog form textarea,
+.modal-dialog form select {
+  width: 240px;
+  padding: 5px 3px;
+  font-size: 14px;
+  vertical-align: middle;
+  background: #fff;
+  border: 1px solid #c9c9c9;
+  border-radius: 3px;
+}
+
+.modal-dialog form input:hover,
+.modal-dialog form textarea:hover,
+.modal-dialog form select:hover,
+.modal-dialog form input:focus,
+.modal-dialog form textarea:focus,
+.modal-dialog form select:focus {
+  outline: none;
+}
+
+.modal-dialog form input:focus,
+.modal-dialog form textarea:focus,
+.modal-dialog form select:focus {
+  border-color: #29aaee;
+}
+
+.modal-dialog form input > .clear-float,
+.modal-dialog form textarea > .clear-float,
+.modal-dialog form select > .clear-float {
+  clear: both;
+}
+
+.modal-dialog form input[type="checkbox"],
+.modal-dialog form textarea[type="checkbox"],
+.modal-dialog form select[type="checkbox"] {
+  width: 20px;
+  padding: 0;
+  margin: 0;
+}
+
+.modal-dialog form input.invalid,
+.modal-dialog form textarea.invalid,
+.modal-dialog form select.invalid {
+  border-color: #e36f6f;
+}
+
+.modal-dialog form > div > .fields-area .modal-steps {
+  position: relative;
+  width: 1000%;
+  overflow-x: hidden;
+  -webkit-transition: left .5s;
+       -o-transition: left .5s;
+          transition: left .5s;
+}
+
+.modal-dialog form > div > .fields-area .modal-step {
+  float: left;
+  width: 450px;
+}
+
+.modal-dialog form > div > .cross-modal-footer {
+  position: relative;
+  height: 45px;
+  background: #f6f7f7;
+  border-radius: 0 0 5px 5px;
+}
+
+.modal-dialog form > div > .cross-modal-footer button {
+  position: absolute;
+  right: 60px;
+  width: 64px;
+  padding: 3px 2px;
+  margin-top: 10px;
+  color: #fff;
+  vertical-align: middle;
+  background-color: #29aaee;
+  border-bottom: 1px solid #aaa;
+}
+
+.modal-dialog form > div > .cross-modal-footer button:hover {
+  color: #ddd;
+}
+
+.modal-dialog form > div > .cross-modal-footer button[name="cancel"],
+.modal-dialog form > div > .cross-modal-footer button[name="stepPrevious"] {
+  position: absolute;
+  right: auto;
+  left: 60px;
+}
+
+.modal-dialog form > div > .cross-modal-footer button[name="cancel"] {
+  color: #aaa;
+  background-color: #dfe4e6;
+}
+
+.modal-dialog form > div > .cross-modal-footer button[name="cancel"]:hover {
+  color: #999;
+}
+
+.modal-dialog form > div > .cross-modal-footer button:focus {
+  outline: none;
+}
+
+.modal {
+  position: absolute;
+}
+
+.modal.window-larger > .modal-dialog {
+  width: 750px;
+}
+
+.modal.window-larger > .modal-dialog .modal-content {
+  background: #e6e6e6;
+}
+
+.modal.window-larger > .modal-dialog .cross-modal-center {
+  background: #fff;
+  border-right: 2px solid #e0e0e0;
+}
+
+.modal.window-larger > .modal-dialog .cross-modal-des {
+  position: absolute;
+  top: 40px;
+  width: 195px;
+  margin-left: 452px;
 }
