--- a/app/styles/ng-grid-custom-style.less
+++ b/app/styles/ng-grid-custom-style.less
@@ -111,14 +111,13 @@
   }
 }
 
-.ngFooterPanel {
+.ngFooterPanel, .cross-footer-panel {
   background-color: @DATA_TABLE_EVEN_ROW_BG;
   border-top: none;
   .pageCode {
-    width: 160px;
+    width: 190px;
     height: 25px;
     float: right;
-    margin-left: 20px;
     margin-top: 10px;
     li {
       list-style: none;
